# auto-agent-plugin-porter

./: .gitignore  AGENTS.md  Jenkinsfile  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS
.github/workflows/: ci.yml
plugins/claude-to-codex/: OWNERS
plugins/claude-to-codex/.codex-plugin/: plugin.json
plugins/claude-to-codex/porter/: Cargo.toml
plugins/claude-to-codex/porter/src/: frontmatter.rs  hashing.rs  hooks.rs  lib.rs  main.rs  sync.rs
plugins/claude-to-codex/references/: mechanism.md
plugins/claude-to-codex/scripts/: porter-bootstrap.ps1  porter-bootstrap.sh  porter-build.ps1  porter-sync.ps1
plugins/codex-to-claude/.claude-plugin/: plugin.json
porter/src/: frontmatter.rs  hashing.rs  hooks.rs
porter/tests/: integration.rs
porter/wrappers/: porter-build.ps1  porter-build.sh  porter-sync.sh
registry/: plugins.json  schema.json
scripts/: _append_to_registry.py  _bump_registry_version.py  _is_claude_only.py  _is_codex_only.py  bootstrap-registry.py  bump-version.sh  check-instructions-sync.sh  generate-manifests.py  new-plugin.sh  setup.sh  sync-porter.sh  test.sh  validate-json.sh  validate-registry.py  validate.sh
scripts/tests/: test_append_to_registry.py  test_bootstrap_registry.py  test_bump_registry_version.py  test_check_instructions_sync.py  test_generate_manifests.py  test_is_claude_only.py  test_is_codex_only.py  test_new_plugin.py  test_regression_guards.py  test_validate_registry.py  test_validate_sh.py
(+15 files in other folders)
